# fast-agent-fz

./: .gitattributes  .gitignore  .python-version  Dockerfile  README.md  agent.py  fastagent.config.aws.yaml  fastagent.config.yaml  gradio_app.py  install_gradio.ps1  install_gradio.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  start_hot_reload.ps1
documentation/: 3ds2.md  batches.md  card-on-file.md  direct-entries.md  getting-started.md  glossary.md  gradio-implementation-plan.md  merchant-dashboard.md  network-token-passthrough.md  pagination.md  persisted-invoices.md  purchases.md  sdk.md  security.md  test-card-numbers.md  testing.md  wallets.md  webhooks.md
instructions/: resource_loading_options.md
static/fz_skin/: custom.css
utils/: auto_approve_claude.js  dev_watch.py
